@@ -1,7 +1,11 @@
 [buildout]
 develop = .
 parts = test
+versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = zope.app.dependable [test]
+
+[versions]
+zope.interface = 4.0.3
