@@ -43,6 +43,10 @@ setup(name='zope.app.dependable',
           'Intended Audience :: Developers',
           'License :: OSI Approved :: Zope Public License',
           'Programming Language :: Python',
+          'Programming Language :: Python :: 2',
+          'Programming Language :: Python :: 2.6',
+          'Programming Language :: Python :: 2.7',
+          'Programming Language :: Python :: Implementation :: CPython',
           'Natural Language :: English',
           'Operating System :: OS Independent',
           'Topic :: Internet :: WWW/HTTP',
@@ -52,7 +56,7 @@ setup(name='zope.app.dependable',
       packages=find_packages('src'),
       package_dir = {'': 'src'},
       namespace_packages=['zope', 'zope.app'],
-      extras_require=dict(test=['zope.app.testing']),
+      extras_require=dict(test=[]),
       install_requires=['setuptools',
                         'zope.annotation',
                         'zope.exceptions',
