@@ -1,0 +1,31 @@
+[tox]
+envlist =
+    py26,py27
+
+[testenv]
+commands =
+    python setup.py test -q
+# without explicit deps, setup.py test will download a bunch of eggs into $PWD
+deps =
+    zope.annotation
+    zope.exceptions
+    zope.i18nmessageid
+    zope.interface
+    zope.lifecycleevent
+    zope.location
+    zope.traversing
+
+[testenv:coverage]
+basepython =
+    python2.7
+commands =
+#   The installed version messes up nose's test discovery / coverage reporting
+#   So, we uninstall that from the environment, and then install the editable
+#   version, before running nosetests.
+    pip uninstall -y zope.app.dependable
+    pip install -e .
+    nosetests --with-xunit --with-xcoverage
+deps =
+    nose
+    coverage
+    nosexcover
